--- a/Software/KISSlicer/KISSlicer_CR7/_styles.ini
+++ b/Software/KISSlicer/KISSlicer_CR7/_styles.ini
@@ -46,3 +46,15 @@ infill_st_oct_rnd=1
 inset_surface_xy_mm=0.2
 seam_jitter_degrees=0
 seam_depth_scaler=0.5
+
+[Johann]
+layer_thickness_mm=0.2
+extrusion_width_mm=0.4
+num_loops=3
+skin_thickness_mm=0.6
+infill_extrusion_width=0.4
+infill_density_denominator=2
+stacked_layers=1
+use_destring=1
+loops_insideout=0
+round_infill=0
