--- a/Software/KISSlicer/MyKISSlicer/Auto_Leveling/20170414/big/_styles.ini
+++ b/Software/KISSlicer/MyKISSlicer/Auto_Leveling/20170414/big/_styles.ini
@@ -56,5 +56,9 @@ infill_extrusion_width=0.4
 infill_density_denominator=2
 stacked_layers=1
 use_destring=1
+use_wipe=1
 loops_insideout=0
-round_infill=0
+infill_st_oct_rnd=1
+inset_surface_xy_mm=0
+seam_jitter_degrees=0
+seam_depth_scaler=1
